--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -551,6 +551,7 @@ textarea.input {
     background: -ms-linear-gradient(bottom, rgba(#efefef, 1), rgba(#efefef, .9) 75%, rgba(#efefef, 0));
     background: linear-gradient(bottom, rgba(#efefef, 1), rgba(#efefef, .9) 75%, rgba(#efefef, 0));
     margin: 0;
+    z-index: 1000;
     padding: 1.5em 3em 1.5em;
   }
   .ltr .mainbar .form .buttons {
